Add edit collection route
